Let's track where we found these links

--- a/content/2023/02-21-ecow.md
+++ b/content/2023/02-21-ecow.md
@@ -4,6 +4,7 @@ date = 2023-02-21T13:56:00-08:00
 
 [taxonomies]
 tag = ["Rust", "Dev"]
+via = ["Mastodon"]
 +++
 
 Ecow: Compact, clone-on-write vector and string.
